# eeg-smt-docker

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  plot.py  pyproject.toml  run-modeegdriver.sh
.devcontainer/: .cruft.json  dev.Dockerfile  devcontainer.json
.github/workflows/: publish_image.yml
